tests/NormalTests/paczka1/fuzzy1/19006713.err
Error in line 1: Z9060L S725 97,0
Error in line 2: A5RzXKODKb7 S721 80,6
Error in line 3: Z9060L S721 97,9
Error in line 13: fSkw5 A604 81,t
Error in line 11: leJQ9FQG3g S66 7,6
Error in line 17: Z9060L A604 26,8
Error in line 26: A604 S66 55,4
Error in line 20: QKRmJ0Eu8MS S721 65,8
Error in line 30: QKRmJ0Eu8MS S725 89,8
